2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_terminal): Fix code style nits.
	Parenthesize formally complex expressions.  Arrange equality
	comparisons to avoid inadvertent lvalue assignment.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Fix code style nits.
	(do_terminal, terminal, terminal1, terminal_continue)
	(do_write_request, write_request, write_request_continue)
	(write_macro_request): Mark functions `static` since they do not
	require external linkage.
	(do_terminal): Demote argument types from `int` to `bool`.
	Rename them from `newline` and `string_like` to
	`do_append_newline` and `interpret_leading_spaces`.
	(terminal, terminal1, terminal_continue): Update call sites to
	use Boolean rather than integer literals.
	(do_write_request): Demote argument type from `int` to `bool`.
	Rename it from `newline` to `do_append_newline`.
	(write_request, write_request_continue): Update call sites to
	use Boolean rather than integer literals.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (process_macro_package_argument):
	Clarify fatal diagnostic message.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Slightly refactor.

	* src/roff/troff/env.h: Rename `want_break` global Boolean,
	relocating its declaration from here...
	* src/roff/troff/input.h: ...to here, as
	`was_invoked_with_regular_control_character`.  Yes, it's a
	mouthful, but it is the task of the request handlers, which are
	input processing functions, to interpret *roff's two distinct
	control characters, giving them one of them break suppression
	semantics.
	* src/roff/troff/div.cpp (begin_page, space_request)
	(flush_request):
	* src/roff/troff/env.cpp (fill, no_fill, center, right_justify)
	(indent, temporary_indent)
	(break_without_forced_adjustment_request)
	(break_with_forced_adjustment_request):